# GifAgent

./: .gitignore  Agent.md  CODE_REVIEW_COMPATIBILITY_FIX_2026-07-18.md  CODE_REVIEW_FOLLOWUP_2026-07-18.md  CODE_REVIEW_RECOMMENDATIONS_2026-07-18.md  CODE_REVIEW_STAGE_SPLIT_RECHECK_2026-07-18.md  README.md  STAGE_SPLIT_PLAN_IMPLEMENTATION_REPORT_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_EIGHTH_FIX_REPORT_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_EIGHTH_REVIEW_IMPLEMENTATION_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_FIFTH_REVIEW_IMPLEMENTATION_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_FIX_REPORT_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_FOURTH_REVIEW_IMPLEMENTATION_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_NINTH_FIX_REPORT_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_NINTH_REVIEW_IMPLEMENTATION_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_REVIEW_IMPLEMENTATION_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_SECOND_FIX_REPORT_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_SECOND_REVIEW_IMPLEMENTATION_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_SEVENTH_REVIEW_IMPLEMENTATION_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_SIXTH_REVIEW_IMPLEMENTATION_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_THIRD_FIX_REPORT_2026-07-18.md  STAGE_SPLIT_PRODUCTION_PATH_THIRD_REVIEW_IMPLEMENTATION_2026-07-18.md  STAGE_SPLIT_RECHECK_FIX_REPORT_2026-07-18.md  STAGE_SPLIT_RECHECK_IMPLEMENTATION_PLAN_2026-07-18.md  build_exe.spec  pyproject.toml  requirements.txt  version1.md  version2_新样本处理.md  使用手册.md  初版构建方案.md
app/: __init__.py  config.py  db.py  main.py
configs/: models.yaml
data/: library.db-shm  (+5 more)
(+241 files in other folders)
