[project]
name = "gifagent"
version = "0.1.0"
description = "Local movie-scene GIF auto-tagging and preference agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "gradio>=5.0",
    "Pillow>=11.0",
    "imagehash>=4.3",
    "numpy>=2.0",
    "faiss-cpu>=1.9",
    "watchdog>=6.0",
    "httpx>=0.28",
    "pydantic>=2.10",
    "python-multipart>=0.0.18",
    "opencv-python-headless>=4.10",
    "pyyaml>=6.0",
]

[tool.uv]
dev-dependencies = []
